--- a/_config.yml
+++ b/_config.yml
@@ -11,24 +11,25 @@ name: 'Finding The Way Home'
 description: "A beautiful narrative written with the world's most elegant publishing platform. The story begins here."
 
 # Author's info
-author: 'Casper McFadden'
+author: 'agramar'
 # edit 'categories' in the front matter of every post to match this username
-nickname: casper
-bio: 'A paranormal expert and his daughter bunk in an abandoned house populated by 3 mischievous ghosts and one friendly one.'
-location: 'Maine, USA'
-url: 'http://biomadeira.github.io/jasper/'
+nickname: agramar
+bio: '힘듦'
+location: 'Seoul, KR'
+url: 'http://agramar.github.io/'
 image: 'assets/images/casper.png'
 
-short_url: 'biomadeira.github.io/jasper/'
-google_analytics: UA-69281367-1
-disqus: username
+short_url: 'agramar.github.io'
+google_analytics: UA-104415135-1
+disqus: jaehongsong
+
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: /jasper/
+baseurl: '/'
 
 # Permalinks
-permalink: /:title
-# permalink: /author/:username
-# permalink: /tag/:tag
+permalink: :title
+# permalink: author/:username
+# permalink: tag/:tag
 
 
 # gems and other configs
@@ -56,13 +57,11 @@ exclude: [vendor]
 # or "master" otherwise
 safe: false
 lsi: false
-username: biomadeira
-repo: jasper
+username: agramar
+repo: agramar.github.io
 branch: master
 relative_source: ../jasper/
 destination: ../jasper-pages/
-production_url:  https://biomadeira.github.io/jasper/
-source_url:      https://github.com/biomadeira/jasper/
 
 exclude:
   - README.md
