--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site Info
-title: Codinfox Lanyon
-tagline: 'A Jekyll theme based on Lanyon'
-description: 'A Jekyll theme adapted from <a href="http://lanyon.getpoole.com/" target="_blank">Lanyon</a>. Made by <a href="http://codinfox.github.io" target="_blank">@codinfox</a>.'
+title: Agramar Github Page
+tagline: 'Agramar Github Page'
+description: 'description'
 baseurl: ""
-url: http://codinfox.github.io
+url: http://agramar.github.io
 logo: '/public/logo.png'
 
 # Site configurations
@@ -24,11 +24,11 @@ version: 1.0.0
 
 # About/contact
 author:
-  name: Agramar
-  description: A passionate <strong>developer and researcher</strong>, learning to be a giant.
-  gravatar: 3c2986ad7ac1f2230ea3596f44563328 # md5 hash of your email address
+  name: agramar
+  description: agramar
+  gravatar: c5fa24190a425a6101d8411755ffa97c # md5 hash of your email address
   contact:
-    linkedin:  https://www.linkedin.com/in/lizhihao
+    # linkedin:  https://www.linkedin.com/in/lizhihao
     github:    https://github.com/agramar
     # facebook:  <hide>
     email:     http://iamsjh1017@gmail.com/
@@ -50,9 +50,9 @@ category_page: '/blog/categories/'
 
 hero:
   image: /public/img/we_will_be_giants_by_yalestewart.jpg
-  caption: Original Artwork &copy; <a href="http://yalestewart.deviantart.com/art/We-Will-Be-Giants-370176475">Yale Stewart</a>
+  caption: Hello &copy; <a href="http://yalestewart.deviantart.com/art/We-Will-Be-Giants-370176475">World</a>
 
 # Puglins
 mathjax: true # whether support mathjax
 google_analytics_token: 'UA-00000000-1' # leave blank if you don't want google analytics
-disqus_short_name: 'your_short_name' # leave blank if you don't want disqus
+disqus_short_name: 'agramar-github-io' # leave blank if you don't want disqus
