--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,10 @@ author:
   description: agramar
   gravatar: c5fa24190a425a6101d8411755ffa97c # md5 hash of your email address
   contact:
-    # linkedin:  https://www.linkedin.com/in/lizhihao
+    # linkedin:  https://www.linkedin.com/in/
     github:    https://github.com/agramar
     # facebook:  <hide>
-    email:     http://iamsjh1017@gmail.com/
+    # email:     http://iamsjh1017@gmail.com/
 
 # Navigation (2nd level links supported)
 nav:
