--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,22 @@
-#!/usr/bin/env bash
-set -e # halt script on error
+language: ruby
+rvm:
+- 2.3.3
 
-bundle exec jekyll build
-bundle exec htmlproofer ./_site
+before_script:
+ - chmod +x ./script/cibuild # or do this locally and commit
+
+# Assume bundler is being used, therefore
+# the `install` step will run `bundle install` by default.
+script: ./script/cibuild
+
+# branch whitelist, only for GitHub Pages
+branches:
+  only:
+#  - gh-pages     # test the gh-pages branch
+#  - /pages-(.*)/ # test every branch which starts with "pages-"
+    - master
+env:
+  global:
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+
+sudo: false # route your build to the container-based infrastructure for a faster build
