--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,14 @@ language: ruby
 rvm:
 - 2.3.3
 
-before_script:
- - chmod +x ./script/cibuild # or do this locally and commit
+install: gem install jekyll html-proofer
+script: jekyll build && htmlproof ./_site
 
-# Assume bundler is being used, therefore
-# the `install` step will run `bundle install` by default.
-script: ./script/cibuild
-
-# branch whitelist, only for GitHub Pages
+# 브랜치 화이트리스트. GitHub Pages 에서만 사용됨
 branches:
   only:
-#  - gh-pages     # test the gh-pages branch
-#  - /pages-(.*)/ # test every branch which starts with "pages-"
-    - master
+  - master
+
 env:
   global:
-  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
-
-sudo: false # route your build to the container-based infrastructure for a faster build
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # html-proofer 의 설치 속도를 높여줌
