--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ tag_page: '/blog/tags/'
 category_page: '/blog/categories/'
 
 hero:
-  image: /public/img/메레기.jpg
+  image: /public/img/남극.jpg
   caption: Hello &copy; <a href="http://agramar.github.io">World</a>
 
 # Puglins
