--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: 'http://agramar.github.io'
 logo: '/public/logo.png'
 
 # Site configurations
-gems:
+plugins:
   - jekyll-paginate
 markdown: kramdown
 kramdown:
